[gd_scene load_steps=13 format=3 uid="uid://bppq6xmpm24dc"]

[ext_resource type="Script" path="res://Scripts/PreparingMision.gd" id="1_e66jx"]
[ext_resource type="PackedScene" uid="uid://clj58sdlgehjy" path="res://Scenes/Menus/detallesMisionPanel.tscn" id="1_ucwai"]
[ext_resource type="PackedScene" uid="uid://ddxl6wsmou5do" path="res://Scenes/Menus/mercenariosPanel.tscn" id="2_u8sc0"]
[ext_resource type="Texture2D" uid="uid://ckaiqxnec06kq" path="res://TEST/balanza.png" id="3_ehl8j"]
[ext_resource type="FontFile" uid="uid://bv8fe2b6ni5fa" path="res://Fonts/m3x6.ttf" id="5_l4twi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_odf8w"]
atlas = ExtResource("3_ehl8j")
region = Rect2(144, 52, 43, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7xm3"]
size = Vector2(19, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_q50ms"]
atlas = ExtResource("3_ehl8j")
region = Rect2(144, 52, 43, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2ncg"]
size = Vector2(21, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn5y0"]
atlas = ExtResource("3_ehl8j")
region = Rect2(144, 16, 134, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wihs"]
size = Vector2(136, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef6ef"]
atlas = ExtResource("3_ehl8j")
region = Rect2(36, 20, 72, 143)

[node name="PreparingMisionPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e66jx")

[node name="Balanza" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="PinJoint2D" type="PinJoint2D" parent="Balanza"]
position = Vector2(197, 126)
node_a = NodePath("../equilibrio")
node_b = NodePath("../pendulo 1")

[node name="PinJoint2D2" type="PinJoint2D" parent="Balanza"]
position = Vector2(315, 125)
node_a = NodePath("../pendulo 2")
node_b = NodePath("../equilibrio")

[node name="pendulo 2" type="RigidBody2D" parent="Balanza"]
show_behind_parent = true
position = Vector2(315, 158)

[node name="PenduloDerecho" type="Sprite2D" parent="Balanza/pendulo 2"]
texture = SubResource("AtlasTexture_odf8w")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balanza/pendulo 2"]
position = Vector2(0.5, 10.5)
shape = SubResource("RectangleShape2D_p7xm3")

[node name="pendulo 1" type="RigidBody2D" parent="Balanza"]
show_behind_parent = true
position = Vector2(197, 156)

[node name="PenduloIzquierdo" type="Sprite2D" parent="Balanza/pendulo 1"]
texture = SubResource("AtlasTexture_q50ms")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balanza/pendulo 1"]
position = Vector2(-0.5, 11)
shape = SubResource("RectangleShape2D_d2ncg")

[node name="equilibrio" type="StaticBody2D" parent="Balanza"]
position = Vector2(256.5, 125.5)

[node name="Equilibrio" type="Sprite2D" parent="Balanza/equilibrio"]
texture = SubResource("AtlasTexture_nn5y0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balanza/equilibrio"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_8wihs")

[node name="Cuerpo" type="Sprite2D" parent="Balanza"]
position = Vector2(257.5, 167.5)
texture = SubResource("AtlasTexture_ef6ef")

[node name="blankSpaceButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="detallesMisionPanel" parent="." instance=ExtResource("1_ucwai")]
layout_mode = 1
offset_left = -75.0
offset_top = -32.9
offset_right = 85.0
offset_bottom = 159.1
mouse_filter = 1

[node name="mercenariosPanel" parent="." instance=ExtResource("2_u8sc0")]
layout_mode = 1
offset_left = 349.0
offset_top = -57.85
offset_right = 349.0
offset_bottom = 160.15

[node name="porciento_exito" type="Label" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 50.0
offset_right = 293.0
offset_bottom = 101.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("5_l4twi")
theme_override_font_sizes/font_size = 60
text = "100%"

[connection signal="pressed" from="blankSpaceButton" to="." method="CerrarPanel"]
